# mempulse

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md
application/: CMakeLists.txt  main.cpp
cmake/: AddHip.cmake  CompileOptions.cmake  CompilerFeatures.cmake  CopyFileToTarget.cmake  FindDrm.cmake  FindHip.cmake  WindowsFileVersion.cmake
examples/: CMakeLists.txt  README.md  example.cpp  mempulse_basic.cpp  mempulse_d3dkmtq.cpp  mempulse_d3dkmtq2.cpp  mempulse_d3dkmtq3.cpp  mempulse_d3dkmtq4.cpp  mempulse_pqc.cpp
files/: mempulse.pc.in
include/mempulse/: config.h  memory_info.h  memory_reporter.h  memory_reporter_factory.h  memory_usage.h  mempulse.h
mempulse/: Assert.h  Backend.h  CMakeLists.txt  Config.h.in  Device.h  Error.cpp  Error.h  LibraryContext.cpp  LibraryContext.h  Logging.cpp  Logging.h  MempulseContextImpl.cpp  MempulseContextImpl.h  SafeCall.h  Utils.cpp  Utils.h  mempulse.cpp  mempulse.h  version.rc.in  version_info.h.in
mempulse/backend/d3dkmt/: BackendD3dkmt.cpp  BackendD3dkmt.h  CMakeLists.txt  D3DKMTAdapter.cpp  D3DKMTAdapter.h  DeviceD3dkmt.cpp  DeviceD3dkmt.h  ErrorD3dkmt.cpp  ErrorD3dkmt.h  LibraryContextD3dkmt.cpp  LibraryContextD3dkmt.h  d3dkmt_memory_reporter.h
mempulse/backend/drm/: Authentificate.cpp  Authentificate.h  BackendDrm.cpp  BackendDrm.h  CMakeLists.txt  CheckDrm.h  Defines.h  DeviceDrm.cpp  DeviceDrm.h  DrmAmdgpu.cpp  DrmAmdgpu.h  DrmDevice.cpp  DrmDevice.h  DrmDevices.cpp  DrmDevices.h  DrmFileAmdgpu.cpp  DrmFileAmdgpu.h  DrmVersionPtr.cpp  DrmVersionPtr.h  ErrorDrm.cpp  ErrorDrm.h  File.cpp  File.h  FileDrmAmdgpu.cpp  FileDrmAmdgpu.h  HardwarePci.cpp  HardwarePci.h  LibraryContextDrm.cpp  LibraryContextDrm.h
mempulse/backend/hip/: .DeviceHip.cpp.swp  BackendHip.cpp  BackendHip.h  CMakeLists.txt  CheckHip.h  DeviceHip.cpp  DeviceHip.h  ErrorHip.cpp  ErrorHip.h  HipRuntime.h  LibraryContextHip.cpp  LibraryContextHip.h
resources/: MempulseConfig.cmake.in
src/: CMakeLists.txt  assert.h  memory_info.cpp  memory_reporter.cpp  memory_reporter_factory.cpp  memory_usage.cpp  mempulse.cpp  utils.h
src/platform/linux/: hip_memory_reporter.cpp  hip_memory_reporter.h
src/platform/windows/: d3dkmt_memory_reporter.cpp  d3dkmt_memory_reporter.h
src/utils/: pci_utils.cpp  pci_utils.h
tests/: CMakeLists.txt  TestDevice.cpp  TestLibrary.cpp  TestMeminfo.cpp
